--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,44 +1,19 @@
-name: 'Update README'
+name: Update README
 
 on:
   schedule:
-    - cron: '0 */24 * * *'
-  workflow_dispatch:
-  #push:
-  #  branches:
-  #    - main
+    - cron: "*/5 * * * *" # Runs every 5 minutes.
 
 jobs:
-  recent-activity:
-    name: 'Update README with latest activity'
+  build:
     runs-on: ubuntu-latest
+    name: Update this repo's README with recent activity
+
     steps:
-      - name: 'Checkout Repository'
-        uses: actions/Checkout@v3
-      - name: 'Update README.md from TEMPLATE.md'
-        uses: Readme-Workflows/recent-activity@main
+      - uses: actions/checkout@v2
+      - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          CONFIG_FILE: 'recent-activity.config.yml'
-  metrics:
-    name: 'Update SVGs for Readme stats'
-    runs-on: ubuntu-latest
-    needs: recent-activity
-    steps:
-      - uses: lowlighter/metrics@v3.33
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: Readme-Workflows
-          repo: recent-activity
-          template: markdown
-          filename: README.md
-          markdown: TEMPLATE.md
-          markdown_cache: '.github/svg_cache'
-          
-          base: ""
-          
-          config_octicon: yes
-          
-          plugin_stargazers: yes
-          plugin_contributors: yes
+          COMMIT_MSG: "Updated README with recent activity"
+          MAX_LINES: 10
